--- a/wrmi-macros/Cargo.toml
+++ b/wrmi-macros/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
-name = "wrmi-ts-convert"
+name = "wrmi-macros"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+proc-macro = true
+
 [dependencies]
-winnow = "0.5.17"
 proc-macro2 = "1"
 quote = "1"
 syn = { version = "2", features = ["full"] }
+wrmi-ts-convert = { path = "../wrmi-ts-convert/" }
