--- a/wrmi/Cargo.toml
+++ b/wrmi/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 wrmi-macros = { path = "../wrmi-macros/" }
 wrmi-core = { path = "../wrmi-core/" }
 ref-cast = "1"
+serde = { version = "1", features = ["derive"] }
