--- a/wrmi-dom/Cargo.toml
+++ b/wrmi-dom/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+wrmi-macros = { path = "../wrmi-macros/" }
+wrmi-core = { path = "../wrmi-core/" }
+wrmi-javascript = { path = "../wrmi-javascript/" }
+ref-cast = "1"
+serde = { version = "1" }
