--- a/wrmi/Cargo.toml
+++ b/wrmi/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 wrmi-macros = { path = "../wrmi-macros/" }
 wrmi-core = { path = "../wrmi-core/" }
+wrmi-javascript = { path = "../wrmi-javascript/" }
 ref-cast = "1"
-serde = { version = "1", features = ["derive"] }
+serde = { version = "1" }
