--- a/wsdom-javascript/Cargo.toml
+++ b/wsdom-javascript/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 wsdom-macros = { path = "../wsdom-macros/" }
+wsdom-macros-decl = { path = "../wsdom-macros-decl/" }
 wsdom-core = { path = "../wsdom-core/" }
 ref-cast = "1"
 serde = { version = "1" }
