--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -10,3 +10,4 @@ axum = { version = "0.7.2", features = ["ws"] }
 tokio = { version = "1.34.0", features = ["full"] }
 futures-util = { version = "0.3.30" }
 wsdom = { path = "../../wsdom/" }
+wsdom-axum = { path = "../../integrations/wsdom-axum/" }
