--- a/wsdom-core/Cargo.toml
+++ b/wsdom-core/Cargo.toml
@@ -10,3 +10,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ref-cast = "1"
 futures-core = "0.3"
+
+[dev-dependencies]
+wsdom = { path = "../wsdom/" }
+futures-util = { version = "0.3.30" }
