--- a/examples/hello/Cargo.toml
+++ b/examples/hello/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1.34.0", features = ["full"] }
 futures-util = { version = "0.3.30" }
 wsdom = { path = "../../wsdom/" }
 wsdom-axum = { path = "../../integrations/wsdom-axum/" }
+ref-cast = "1"
