--- a/examples/many-examples/Cargo.toml
+++ b/examples/many-examples/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "counter"
+name = "many-examples"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,3 +11,4 @@ tokio = { version = "1.34.0", features = ["full"] }
 futures-util = { version = "0.3.30" }
 wsdom = { path = "../../wsdom/" }
 wsdom-axum = { path = "../../integrations/wsdom-axum/" }
+ref-cast = "1"
