prepare for publish

--- a/wsdom-javascript/Cargo.toml
+++ b/wsdom-javascript/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "wsdom-javascript"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+license = "MPL-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wsdom-macros = { path = "../wsdom-macros/" }
-wsdom-macros-decl = { path = "../wsdom-macros-decl/" }
-wsdom-core = { path = "../wsdom-core/" }
+wsdom-macros = { path = "../wsdom-macros/", version = "0.0.1" }
+wsdom-macros-decl = { path = "../wsdom-macros-decl/", version = "0.0.1" }
+wsdom-core = { path = "../wsdom-core/", version = "0.0.1" }
 ref-cast = "1"
 serde = { version = "1" }
