--- a/integrations/wsdom-axum/Cargo.toml
+++ b/integrations/wsdom-axum/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "wsdom-axum"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+license = "MPL-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 futures-util = "0.3"
 axum = "0.7"
-wsdom-core = { path = "../../wsdom-core/" }
+wsdom-core = { path = "../../wsdom-core/", version = "0.0.1" }
 pin-project-lite = "0.2.13"
