--- a/wsdom-core/Cargo.toml
+++ b/wsdom-core/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "wsdom-core"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+license = "MPL-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
