--- a/wsdom-macros/Cargo.toml
+++ b/wsdom-macros/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "wsdom-macros"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+license = "MPL-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,4 +13,4 @@ proc-macro = true
 proc-macro2 = "1"
 quote = "1"
 syn = { version = "2", features = ["full"] }
-wsdom-ts-convert = { path = "../wsdom-ts-convert/" }
+wsdom-ts-convert = { path = "../wsdom-ts-convert/", version = "0.0.1" }
