add repo link and small polishes for publication

--- a/integrations/wsdom-axum/Cargo.toml
+++ b/integrations/wsdom-axum/Cargo.toml
@@ -3,6 +3,10 @@ name = "wsdom-axum"
 version = "0.0.1"
 edition = "2021"
 license = "MPL-2.0"
+description = "use wsdom with axum"
+repository = "https://github.com/wishawa/wsdom"
+documentation = "https://docs.rs/wsdom-axum"
+categories = ["api-bindings"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
